--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -1,7 +1,7 @@
 body{
   background-color: #e6e6ff;
   margin: 0;
-  background-image: url("file:///C:/Users/aryan/OneDrive/Desktop/order-summary-component-main/images/pattern-background-desktop.svg");
+  background-image: url("https://github.com/aryansatya/orderfem/blob/main/images/pattern-background-desktop.svg");
   background-repeat: no-repeat;
   background-size: 100%;
 }
