--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -1,7 +1,7 @@
 body{
   background-color: #e6e6ff;
   margin: 0;
-  background-image: url(../images/pattern-background-desktop.svg);
+  background: url(../images/pattern-background-desktop.svg), #e0e8ff;
   background-repeat: no-repeat;
   background-size: 100%;
 }
