--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -35,6 +35,7 @@ h1{
   font-size: 17px;
   color: #666666;
   font-weight: normal;
+  cursor: auto;
 }
 
 .payment{
@@ -58,6 +59,7 @@ h1{
   text-align: right;
   color: #6600cc;
   font-family: 'Karla', sans-serif;
+  cursor: pointer;
 }
 
 .proceed{
@@ -71,6 +73,7 @@ h1{
   font-weight: bold;
   color: white;
   filter: drop-shadow(1px 10px 10px #b3b3e6);
+  cursor: pointer;
 }
 
 .all{
@@ -82,6 +85,7 @@ p{
   font-family: 'Karla', sans-serif;
   font-weight: bolder;
   font-size: 15px;
+  cursor: pointer;
 }
 
 .money{
